--- a/RS232/RS232.csproj
+++ b/RS232/RS232.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+  <PropertyGroup>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DocumentationFile>C:\Users\jmgan\source\repos\RS232\RS232\RS232.xml</DocumentationFile>
   </PropertyGroup>
